# friday

./: .env.example  .gitignore  CLAUDE.md  DEPLOY.md  Dockerfile  README.md  chat_server.py  fly.toml  friday_charter.md  friday_reflection_policy.md  friday_relationship_memory.md  friday_voice.md  friday_vows.yaml  pyproject.toml  start.sh  vercel.json
.claude/: launch.json
.claude/commands/: architecture-audit.md  update-repo-map.md
.github/workflows/: ci.yml  deploy-api.yml
apps/api/: deps.py  main.py  security.py  service.py
apps/api/routes/: admin.py  chat.py  conversations.py  files.py  finance.py  governance.py  integrations.py  okrs.py  org.py  proactive.py  processes.py  qa.py  runs.py  tasks.py  workspaces.py
apps/web/: .env.example  Dockerfile.web  README.md  next.config.mjs  package-lock.json  package.json  tsconfig.tsbuildinfo
apps/web/app/: globals.css  layout.tsx
apps/web/app/analytics/: page.tsx
apps/web/app/api/admin/reload/: route.ts
apps/web/app/api/chat/: route.ts
apps/web/app/api/chatkit/session/: route.ts
apps/web/app/approvals/: page.tsx
apps/web/app/design-system/: page.tsx
apps/web/app/documents/: page.tsx
apps/web/app/home/: page.tsx
apps/web/app/okrs/: page.tsx
apps/web/app/okrs/[id]/: page.tsx
apps/web/app/okrs/alignment/: page.tsx
apps/web/app/okrs/dashboards/analytics/: page.tsx
apps/web/app/okrs/dashboards/executive/: page.tsx
apps/web/app/okrs/dashboards/portfolio/: page.tsx
apps/web/app/okrs/dashboards/team/: page.tsx
apps/web/app/okrs/meetings/: page.tsx
apps/web/app/okrs/plan/: page.tsx
apps/web/app/okrs/setup/: page.tsx
apps/web/app/processes/: page.tsx
apps/web/app/processes/[id]/: page.tsx
apps/web/app/qa/: page.tsx
apps/web/app/qa/coverage/: page.tsx
apps/web/app/qa/runs/: page.tsx
apps/web/app/qa/runs/[id]/: page.tsx
apps/web/app/qa/suites/: page.tsx
apps/web/app/qa/suites/[id]/: page.tsx
apps/web/app/qa/tests/: page.tsx
apps/web/app/qa/tests/[id]/: page.tsx
apps/web/app/qa/tests/new/: page.tsx
apps/web/app/settings/: page.tsx
apps/web/app/settings/memory/: page.tsx
apps/web/app/tasks/: page.tsx
apps/web/app/workspaces/: page.tsx
apps/web/app/workspaces/[id]/: page.tsx
apps/web/components/: artifact-card.tsx  artifact-editor.tsx  command-palette.tsx  document-card.tsx  markdown-message.tsx  mermaid-diagram.tsx  page-shell.tsx  use-chat-state.ts  workspace.tsx
apps/web/components/ui/: data-table.tsx  modal.tsx  toast-context.tsx  toast.tsx
apps/web/lib/: types.ts
docs/: agent-registry-summary.md  repo-map.md  testing-playbook.md
docs/architecture/: api_surface.md  overview.md
evals/scenarios/: core-routing.json  project_manager_examples.md
infra/docker/: README.md  docker-compose.yml
infra/temporal/: README.md
scripts/: create_agent_from_template.py  dev_down.sh  dev_up.sh  run_temporal_worker.py  update_repo_map.py
src/business_ai/: app.py
src/business_ai/agents/: __init__.py  communications.py  generic_domain.py
src/business_ai/core/: interfaces.py  models.py  orchestrator.py  router.py
src/business_ai/memory/: store.py
tests/: test_agent_project_manager.py  test_audit_store.py  test_new_agents.py  test_okr_redesign.py  test_phase2.py  test_phase3.py  test_phase4.py  test_provenance.py  test_qa.py  test_smoke.py  test_tools_resources.py  test_workspaces.py
ui/: index.html
ui/assets/: app.js  styles.css
workers/evals/: __init__.py  harness.py  worker.py
workers/orchestrator/: __init__.py  critic.py  planner.py  runtime.py  synthesizer.py  temporal_definitions.py  temporal_runtime.py  workflows.py
workers/reflection/: __init__.py  worker.py
