[project]
name = "friday"
version = "0.2.0"
description = "Friday multi-agent business operating system"
requires-python = ">=3.9"
dependencies = [
  "fastapi>=0.110.0",
  "pydantic>=2.6.0",
  "uvicorn>=0.29.0",
  "anthropic>=0.25.0",
  "openai>=1.0.0",
  "python-multipart>=0.0.9",  # required for POST /upload (file uploads)
]

[project.optional-dependencies]
# Phase 3 production dependencies:
#   pip install -e ".[phase3]"
# Then set FRIDAY_MEMORY_DATABASE_URL=postgresql://... to enable Postgres+pgvector
# and FRIDAY_AUDIT_DATABASE_URL=postgresql://... for the audit store.
phase3 = [
  "psycopg[binary]>=3.1.0",   # Postgres driver (also used by pgvector path)
  "temporalio>=1.7.0",         # Durable workflow engine (optional; set FRIDAY_WORKFLOW_ENGINE=temporal)
]
# Phase 4 multi-modal file extraction:
#   pip install -e ".[phase4]"
phase4 = [
  "pypdf>=4.0.0",              # PDF text extraction for POST /upload
  "python-docx>=1.1.0",        # DOCX text extraction for POST /upload
]
llm-anthropic = [
  "anthropic>=0.25.0",
]
llm-openai = [
  "openai>=1.0.0",
]

[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[tool.pytest.ini_options]
pythonpath = ["."]
